First CV customization

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>CV - Ocat</title>
-  <meta name="description" content="simple CV example created with HTML and CSS">
+  <title>CV - Julio Sanz</title>
+  <meta name="description" content="CV created with HTML and CSS">
   <meta name="author" content="Fly Nerd">
   <link rel="icon" href="./img/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,134 +14,186 @@
 <body>
   <header>
     <div>
-      <img src="./img/avatar.jpg" />
-    </div>
-    <h1>Ocat Verdigris</h1>
+      <img src="./img/avatar.png" />
+    </div>    
+    <h1>Julio Sanz</h1>
+
     <section>
-      <p>Hello! I am Ocat Verdigris. I work as interface and front-end developer. I have passion for pixel perfect, minimal and easy to use interfaces. I'm  focused, dedicated, hard-working and willing to learn in a changing and challenging environment.</p>
-      <a href="https://www.facebook.com/flynerdpl/" target="_blank">
-        <i class="fab fa-facebook-f"></i>
+      <p>+8 years experience as Middleware Systems Administrator. Currently focused and interested in automation, monitoring, containers and cloud infrastructure.</p>
+      <a href="https://www.elarraydejota.com/" target="_blank">
+        <i class="fab fa-wordpress"></i>
       </a>
-      <a href="https://www.twitter.com/flynerdpl/" target="_blank">
+      <a href="https://twitter.com/elarraydejota" target="_blank">
         <i class="fab fa-twitter"></i>
       </a>
-      <a href="https://github.com/ritaly" target="_blank">
+      <a href="https://github.com/juliojsb" target="_blank">
         <i class="fab fa-github-alt"></i>
       </a>
-      <a href="https://www.instagram.com/flynerdpl/" target="_blank">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/ritalyczywek/" target="_blank">
+      <a href="https://www.linkedin.com/in/julio-sanz/en" target="_blank">
         <i class="fab fa-linkedin-in"></i>
       </a>
+      <a href="mailto: juliojosesb@gmail.com">
+        <i class="fab fa-linux"></i>
+      </a>
     </section>
+
   </header>
   <main>
-    <section>
-      <h3>Courses & Workshops</h3>
-      <article class='course'>
-        <div class='title'>
-          <h4>Udacity: Intro to HTML and CSS</h4>
-        </div>
-        <div class="descrition">
-          <p>Build styled, well-structured websites. Learn how to use HTML5 standard to create websites. Understand CSS syntax, selectors, and units. Learn about code editors and a browser's Developer Tools.</p>
-        </div>
-      </article>
-      <article class='course'>
-        <div class='title'>
-          <h4>Udemy: The Web Developer Bootcamp</h4>
-        </div>
-        <div class="descrition">
-          <p>Learn how to create full-stack web applications from scratch using HTML, CSS, JavaScript, jQuery, VanillaJS, NodeJS, MongoDB.</p>
-        </div>
-      </article>
-      <article class='course'>
-        <div class='title'>
-          <h4>EdX: Web Programming with JavaScript</h4>
-        </div>
-        <div class="descrition">
-          <p>Learn how to create web apps and prototypes with JavaScript, represent and exchange data using JavaScript Object Notation (JSON), and how to access RESTful APIs on the web.</p>
-        </div>
-      </article>
-      <article class='course'>
-        <div class='title'>
-          <h4>Django Girls: 2-Day Workshops</h4>
-        </div>
-        <div class="descrition">
-          <p>Learn back-end development with simple blog application using Django  framework.</p>
-        </div>
-      </article>
-    </section>
+
     <section>
       <h3>Skills</h3>
       <div class='skills'>
         <div class='column'>
-          <h4>Good knowledge</h4>
+          <h4>Main technical knowledge</h4>
           <ul>
-            <li>HTML5</li>
-            <li>CSS</li>
-            <li>JavaScript ES5/6</li>
-            <li>SQL</li>
+            <li>Middleware: Jboss EAP/Wildfly, Tomcat, Weblogic Application Servers & Apache Web Servers</li>
+            <li>Sysadmin: RHEL, Debian and based systems</li>
+            <li>Scripting: Bash & Python</li>
+            <li>Automation: Ansible</li>
+            <li>Code management: Git </li>
+            <li>Monitoring: Collectd/Telegraf/InfluxDB/Grafana & ELK stack</li>
           </ul>
         </div>
         <div class='column'>
-          <h4>Basic knowledge</h4>
+          <h4>Aptitudes</h4>
           <ul>
-            <li>jQuery</li>
-            <li>NodeJS</li>
-            <li>MongoDB</li>
-            <li>Django</li>
+            <li>Technology oriented</li>
+            <li>Standarization focused</li>
+            <li>Automation friendly</li>
+            <li>Team work</li>
           </ul>
         </div>
         <div>
           <h4>Languages</h4>
-          <p>🇵🇱 Polish - Native speaker</p>
-          <p>🇬🇧 English - Proficient C1/C2</p>
-          <p>🇫🇷 French - Advanced - C1</p>
-          <p>🇪🇸 Spanish - Intermediate - B1/B2</p>
-          <p>🇩🇪 German - Elementary / Communicative - A2</p>
+          <p>🇪🇸 Spanish - Native speaker</p>
+          <p>🇬🇧 English - Full professional proficiency</p>
         </div>
       </div>
+    </section>
+
+    <section>
+      <h3>Experience</h3>
+      <article>
+        <div class='job-title'>
+          <span>09.2017 - Present</span> <strong>Banking sector</strong><br> <strong>Position:</strong> Sysadmin
+        </div>
+        <div>
+          <p><strong>Tech stack:</strong> RHV 4.x / Jboss EAP 6 & 7 / RHEL 7 & 8 </p>
+          <ul class="job-description">
+            <li>Management of KVM and RHV virtualized environments</li>
+            <li>Provisioning and configuration of new RHEL based servers and middleware stack (Jboss EAP, Tomcat, Apache)</li>
+            <li>Automation solutions with Ansible, Bash and Python scripting</li>
+            <li>Integration of the different monitoring tools within the systems infrastructure</li>
+          </ul>
+        </div>
+      </article>
+      <br>
+      <article>
+        <div class='job-title'>
+          <span>08.2016 - 07.2017</span> <strong>Spanish Patent and Trademark Office</strong><br> <strong>Position:</strong> Middleware Administrator
+        </div>
+        <div>
+          <p><strong>Tech stack:</strong> Jboss EAP 6 / Jboss SOA 5 / Apache 2.4 / HornetQ </p>
+          <ul class="job-description">
+            <li>Design and implementation of the new web infrastructure for ProtegeO application (registry and management of trademarks)</li>
+            <li>Security hardening of Apache and Jboss in conformity with CCN-CERT</li>
+            <li>Migration from Weblogic 11g and Jboss EAP 6.0 to Jboss EAP 6.4</li>
+          </ul>
+        </div>
+      </article>
+      <br>
+      <article>
+        <div class='job-title'>
+          <span>07.2015 - 07.2016</span> <strong>Hoffmann-La Roche</strong><br> <strong>Position:</strong> Middleware Specialist
+        </div>
+        <div>
+          <p><strong>Tech stack:</strong> Jboss EAP 5 & 6 / Tomcat 6,7 & 8 / Apache 2.x / Wordpress / HPSM </p>
+          <ul class="job-description">
+            <li>Second Level Support for Web Middleware Team</li>
+            <li>Implementation of new web environments in conformity with operational standards of the organization</li>
+            <li>Service management with HP Service Manager following ITIL methodology: documentation and association of incidents and changes within Roche's CMDB</li>
+          </ul>
+        </div>
+      </article>
+      <br>
+      <article>
+        <div class='job-title'>
+          <span>01.2012 - 07.2017</span> <strong>General Secretariat of Penitentiary Institutions (Ministry of Interior)</strong><br> <strong>Position:</strong> Middleware Specialist
+        </div>
+        <div>
+          <p><strong>Tech stack:</strong> Jboss 4,5 & 6 / Tomcat 6 & 7 / Apache 2.x / AWStats 7.1 / OpenCMS / CentOS 6 </p>
+          <ul class="job-description">
+            <li>Installation, management and incident resolution in the Middleware web infrastructure</li>
+            <li>Implementation of the new environments for electronic payroll system (Servinomina) and Registry (integrated with National System of Registry Exchange) applications</li>
+            <li>Automation of deployments and processes with bash scripting</li>
+            <li>Integration of Jboss and Apache monitorization in Nagios</li>
+            <li>SSL management with local CA and FNMT</li>
+          </ul>
+        </div>
+      </article>
+      <br>
+      <article>
+        <div class='job-title'>
+          <span>05.2011 - 01.2012</span> <strong>Public Administration</strong><br> <strong>Position:</strong> Systems Technician
+        </div>
+        <div>
+          <p><strong>Tech stack:</strong> Jboss AS 4 & 5 / Weblogic 11g / Apache 2.2 / RHEL 5 </p>
+          <ul class="job-description">
+            <li>Collaboration with several projects: Nuclear Safety Council, Spanish Agency for International Development Cooperation and Secretary of State for the European Union as Systems Technician support role</li>
+          </ul>
+        </div>
+      </article>
+
     </section>
 
     <section>
       <h3>Education</h3>
       <article>
         <div class='school'>
-          <span>2015-2018</span> <strong>Octocats tech academy</strong>
+          <span>2009-2011</span> <strong>Virgen de la Paloma Technical Education High School</strong>
         </div>
         <div class="descrition">
-          Bechelor Degree of Octorobotics
+          Computer Systems Administration
         </div>
       </article>
       <article>
         <div class='school'>
-          <span>2012-2015</span> <strong>Underwater kittens high school</strong>
+          <span>2006-2009</span> <strong>Autonomous University of Madrid</strong>
         </div>
         <div>
-          Main subject: Cathemathics
+          Bachelor Degree of Psychology
         </div>
       </article>
     </section>
+
     <section>
-      <h3>Experience</h3>
-      <article>
-        <div class='job-title'>
-          <span>03.2018 - 06.2018</span> <strong>Tentacles Company</strong><br> <strong>Position:</strong> Web developer Intern
+      <h3>Latest Courses & Workshops</h3>
+      <article class='course'>
+        <div class='title'>
+          <h4>Udemy: Mastering Ansible</h4>
         </div>
-        <div>
-          <p><strong>Tech stack:</strong> HTML5 / CSS / JavaScript / jQuery</p>
-          <ul class="job-description">
-            <li>Develop web application for Octopoda departments</li>
-            <li>Implement UI (front-end site) based on received graphic design and requirements</li>
-            <li>Co-operate with the back-end team </li>
-          </ul>
+      </article>
+      <article class='course'>
+        <div class='title'>
+          <h4>Udemy: Complete Elasticsearch Masterclass with Logstash and Kibana</h4>
+        </div>
+      </article>
+      <article class='course'>
+        <div class='title'>
+          <h4>Udemy: InfluxDB - The Time Series Database</h4>
+        </div>
+      </article>
+      <article class='course'>
+        <div class='title'>
+          <h4>Udemy: Ansible Advanced - Hands-On - DevOps</h4>
         </div>
       </article>
     </section>
+
   </main>
   <footer>
-    <p>Created by: <a href="https://www.flynerd.pl/">@flynerd</a>  / <a href="https://www.linkedin.com/in/ritalyczywek/">LinkedIn</a> / 2018 </p>
+    <p>Icons designed by: <a href="https://www.flaticon.es/autores/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a> </p>
+    <p>CV Template created by: <a href="https://www.flynerd.pl/">@flynerd</a>  / <a href="https://www.linkedin.com/in/ritalyczywek/">LinkedIn</a> / 2018 </p>
   </footer>
 </body>
 </html>
